Immitate photos work/ photo full screen / add rate in info / if gps is off, show it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity
             android:name=".UI.nextActivity.NextActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".UI.LargePhotoActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
